# bybit_strategy_tester_v2

./: $null  .ai_review_request.md  .coveragerc  .dockerignore  .editorconfig  .env.backup  .env.backup.20251118_114228  .env.env.backup.1762896416  .env.example  .env.production.example  .env.staging  .eslintrc.json  .gitattributes  .gitignore  .hintrc  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .secrets.enc  .yamlrc  00_START_HERE.txt  ABC_EXECUTION_STATUS.md  AFTER_RELOAD_INSTRUCTIONS.md  AGENTS.MD  AGENT_AUTONOMOUS_IMPROVEMENT_FULL_20251118_092159.json  AGENT_AUTONOMOUS_IMPROVEMENT_FULL_20251118_092244.json  AGENT_PERPLEXITY_ONLY_IMPROVEMENT_20251118_092818.json  AGENT_SELF_DIAGNOSIS_20251117_143033.json  AGENT_SELF_DIAGNOSIS_20251117_143321.json  AGENT_SELF_DIAGNOSIS_20251117_144353.json  AGENT_SELF_IMPROVEMENT_REPORT_20251117_151927.json  AGENT_SELF_IMPROVEMENT_REPORT_20251117_170333.json  AGENT_SELF_IMPROVEMENT_REPORT_20251117_174219.json  AGENT_SELF_IMPROVEMENT_REPORT_20251118_023502.json  AGENT_SELF_IMPROVEMENT_SIMPLE_20251118_024627.json  AGENT_SYSTEM_ANALYSIS_REPORT.json  AI_AGENTS_COLLABORATION_MODEL.md  (+885 more)
.agent/: Claude.md  Gemini.md  mcp.json
.ai/: README.md
.claude/: settings.json  settings.local.json
.copilot/: USAGE.md  session-template.md  validation_request.json  variable-tracker.md
.cursor/: mcp.json  workflow_state.md
.github/: COPILOT_INSTRUCTIONS.md  DECISION_MATRIX.md  MULTI_AGENT_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  changelog-config.json  copilot-instructions.md
.gsd/: PROJECT.md  STATE.md  config.json
.qwen/: QWEN.md  config.json
.run/: check.txt  chk.txt  optimizer_progress.json
AirCodum/: file_1761809812464.txt
_deep_snapshot/: code_metrics.txt  coverage.json  index.html  lint.txt  types.txt
_snapshot/: code_metrics.txt  docker_status.txt  git_branch.txt  git_last_commit.txt  local_services.txt
ai_audit_results/: API.txt  AUTOMATION_TASKS_REQUEST.md  List of trades.csv  List of trades2.csv  Performance.csv  Risk performance ratios.csv  Trades analysis.csv  background_analysis_20251110_154044.json  background_analysis_20251110_155134.json  background_analysis_20251110_155307.json  background_analysis_20251110_160334.json  background_analysis_20251110_160454.json  background_analysis_20251110_161558.json  background_analysis_20251110_161704.json  background_analysis_20251110_162812.json  background_analysis_20251110_162912.json  background_analysis_20251110_164035.json  background_analysis_20251110_164125.json  background_analysis_20251110_193211.json  background_analysis_20251110_200722.json  background_analysis_20251110_204239.json  background_analysis_20251110_214447.json  background_analysis_20251110_223836.json  background_analysis_20251110_231350.json  background_analysis_20251111_001134.json  background_analysis_20251111_005602.json  background_analysis_20251111_013047.json  background_analysis_20251111_132915.json  background_analysis_20251111_140425.json  background_analysis_20251111_143935.json  background_analysis_20251111_151500.json  background_analysis_20251111_155018.json  background_analysis_20251111_162532.json  background_analysis_20251111_170045.json  background_analysis_20251111_173604.json  background_analysis_20251111_181111.json  background_analysis_20251111_190809.json  background_analysis_20251111_194253.json  background_analysis_20251111_202357.json  background_analysis_20251111_205943.json  (+1337 more)
alembic/: README.md  env.py  script.py.mako
automation/: README.md  safe_async_bridge.py  sync_async_wrapper.py
backend/: Dockerfile  __init__.py  _import_path.py  alembic.ini  celery_app.py  check_db.py  config.py  create_db.py  dependencies.py  main.py  requirements-archival.txt  requirements.txt  settings.py  test_basic.py  test_block1_full.py  test_block2_full.py  test_block3_data_layer.py  test_block3_optional.py  test_block4_backtest_engine.py
config/: api_key_metadata.json
data/: bybit_strategy_tester.db  prompts_alerts.json  test_prompts_alerts.json
deepseek_fix_plans/: FIX_PLAN_20251112_000701.md
deploy/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  ws_publisher.service
deployment/: .env.production.example  .env.security  Dockerfile.backend  Dockerfile.tick-aggregator  Dockerfile.trade-publisher  QUICK_START.md  README.md  deploy.sh  docker-compose-monitoring.yml  docker-compose-prod.yml  docker-compose.vault.yml  docker-compose.yml  health_check.py  init-db.sql  nginx.conf  production_deploy.py  prometheus.yml  prometheus_rules.yml  recreate_backend.ps1  requirements-prod.txt
docker/: Dockerfile.sandbox  requirements.sandbox.txt  sandbox-requirements.txt
docs/: ACTION_PLAN_PHASE1.md  AGENTS_TOOLS.md  AI_AGENTS_INTEGRATION_MAP.md  AI_BUILD_REMAINING_ISSUES_2026-03-28.md  ALERT_RUNBOOKS.md  ANOMALY_1_FIXED.md  ANOMALY_2_FIXED.md  ANOMALY_3_FIXED.md  API_INVENTORY.md  API_NOTES.md  API_REFERENCE.md  AUDIT_REFACTORING_PLAN.md  AUDIT_REPORT_2025-10-25.md  AUDIT_SUMMARY.md  AUTOGENERATE_ALEMBIC.md  BACKEND_OPTIMIZATION_API.md  BACKTEST_UI_IMPROVEMENTS.md  BLOCK_2_CERTIFICATE.md  BLOCK_3_CERTIFICATE.md  BLOCK_3_CERTIFICATE_backup.md  CELERY_SETUP.md  CHART_PERFORMANCE_FIX.md  CIRCUIT_BREAKER_RUNBOOK.md  CI_CD.md  COMPREHENSIVE_AUDIT_2025-01-27.md  COPILOT_MCP_TEST_RESULTS.md  CSV_COMPLIANCE_DETAILED_2025-01-26.md  DARK_MODE.md  DATA_TYPES.md  DECISIONS.md  DEPRECATION_SCHEDULE.md  DISASTER_RECOVERY_PLAN.md  DOCKER_SETUP.md  DOCUMENTATION_QUICK_REFERENCE.md  DUAL_MODE_ARCHITECTURE.md  ENGINE_OPTIMIZER_MODERNIZATION_PROPOSALS.md  FALLBACK_ENGINE_V4.md  FRONTEND_API_FORMAT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  (+115 more)
documentation/: PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  TZ_unimplemented_features.md  implementation_plan.md  technical_specifications.md  ui_sketches.md
examples/: deepseek_agent_examples.py
frontend/: .eslintrc.cjs  .eslintrc.json  .prettierrc  CLAUDE.md  Dockerfile  OPTIMIZATION_UI_CHANGES.md  PERFORMANCE_DIAGNOSTICS.html  README.md  README_DASHBOARD.md  ai-pipeline.html  logs.txt  (+51 more)
(+3547 files in other folders)
