[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bybit-strategy-tester"
version = "2.0.0"
description = "Bybit Strategy Tester with FastAPI backend and Electron frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.39",
    "alembic==1.13.0",
    "psycopg[binary]==3.2.4",
    "asyncpg==0.30.0",
    "redis==5.0.1",
    "celery==5.3.4",
    "pandas==2.2.3",
    "numpy==2.3.4",
    "pybit==5.7.0",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "httpx==0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools]
packages = ["backend"]
