# ==============================================================================
# Bybit Strategy Tester v2 - Project Configuration
# ==============================================================================
# Modern Python project configuration using pyproject.toml
# PEP 517/518/621 compliant

[project]
name = "bybit-strategy-tester"
version = "2.0.0"
description = "Professional-grade backtesting and live trading platform for Bybit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Roman", email = "roman@example.com" }]
keywords = [
    "trading",
    "backtesting",
    "bybit",
    "cryptocurrency",
    "algorithmic-trading",
    "fastapi",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/RomanCTC/bybit_strategy_tester_v2"
Documentation = "https://github.com/RomanCTC/bybit_strategy_tester_v2#readme"
Repository = "https://github.com/RomanCTC/bybit_strategy_tester_v2"
Issues = "https://github.com/RomanCTC/bybit_strategy_tester_v2/issues"

[project.scripts]
bybit-tester = "backend.api.app:main"

[project.optional-dependencies]
l2-generative = ["torch>=2.0", "websockets"]
dev-full = ["numba", "vectorbt>=0.26.2", "torch>=2.0", "gymnasium>=0.29"]

# ==============================================================================
# Build System
# ==============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]
exclude = ["tests*", "scripts*"]

# ==============================================================================
# Ruff - Fast Python Linter & Formatter
# ==============================================================================
[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (often intentional)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from in except
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402", "E722", "F841", "B011"]
"tests/**/*.py" = ["E402", "E722", "F841", "B011"]
"scripts/*.py" = ["E402", "T201"]
"analyze_*.py" = ["E402", "T201"]
"check_*.py" = ["E402", "T201"]
"debug_*.py" = ["E402", "T201"]
"**/conftest.py" = ["E402"]
"agent_*.py" = ["E722", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers", "--tb=short"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
branch = true
source = ["backend"]
omit = ["*/tests/*", "*/__pycache__/*", "*/migrations/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
fail_under = 50

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# Pyright / Pylance Configuration
# ==============================================================================
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
# Relax strict return-type checks for dynamic typing patterns (json.loads, resp.json(), etc.)
reportReturnType = "none"
reportAssignmentType = "warning"
reportCallIssue = "warning"
# Relax argument type checks for SQLAlchemy 1.x Column[] type mismatches
reportArgumentType = "none"
exclude = ["venv", ".venv", "scripts", "node_modules", "mcp-server", "test_*"]

# ==============================================================================
# MyPy Configuration
# ==============================================================================
[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests", "scripts", "node_modules"]

[[tool.mypy.overrides]]
module = "backend.*"
disallow_untyped_defs = false
check_untyped_defs = true

# SQLAlchemy 1.x Column[] types cause false-positive arg-type / assignment errors
# because mypy sees Column[T] instead of runtime T values from the ORM.
[[tool.mypy.overrides]]
module = "backend.api.routers.optimizations"
disable_error_code = [
    "arg-type",
    "assignment",
    "var-annotated",
    "return-value",
    "union-attr",
    "operator",
    "attr-defined",
    "misc",
    "dict-item",
]

# ==============================================================================
# Black (backup formatter if needed)
# ==============================================================================
[tool.black]
line-length = 120
target-version = ["py313", "py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

# ==============================================================================
# Bandit Security Scanner
# ==============================================================================
[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv", "node_modules"]
skips = [
    "B101", # assert_used - common in tests
    "B104", # hardcoded_bind_all_interfaces - intentional for dev
    "B311", # random - not used for crypto
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
